--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
       "import": "./build/release.js",
       "types": "./build/release.d.ts"
     }
+  },
+  "dependencies": {
+    "as-wasi": "^0.5.1"
   }
 }
