--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "test": "as-pect",
-    "asbuild:debug": "asc assembly/index.ts --target debug",
+    "asbuild:debug": "asc assembly/index.ts --target debug --use abort= --use console.log=",
     "asbuild:release": "asc assembly/index.ts --target release --use abort= --use console.log=",
     "asbuild": "npm run asbuild:debug && npm run asbuild:release",
     "start": "npx serve ."
